spmonitor/spmonitor/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  name: spmonitor-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: >-
        ## REDACTED ##
      http:
        paths:
          - backend:
              service:
                name: spmonitor-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: >-
        ## REDACTED ##
      http:
        paths:
          - backend:
              service:
                name: spmonitor-prometheus-server
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ## REDACTED ##
        - ## REDACTED ##
      secretName: spmonitor-tls-secret
status:
  loadBalancer:
    ingress:
      - ip: ## REDACTED ##
